[refactor] UserPrincipal을 OAuth2User와 통합