@@ -1,68 +1,70 @@
 package com.chaewookim.accountbookformoms.global.security.principal;
 
 import com.chaewookim.accountbookformoms.domain.user.entity.User;
-import com.chaewookim.accountbookformoms.domain.user.enums.UserRole;
 import lombok.Getter;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
+import org.springframework.security.oauth2.core.user.OAuth2User;
 
 import java.util.Collection;
-import java.util.List;
+import java.util.Collections;
+import java.util.Map;
 
 @Getter
-public class UserPrincipal implements UserDetails {
-    private final Long userId;
-    private final String email;
-    private final String password;
-    private final UserRole role;
+public class UserPrincipal implements UserDetails, OAuth2User {
 
-    public UserPrincipal(User user) {
-        this.userId = user.getId();
-        this.email = user.getEmail();
-        this.password = user.getPassword();
-        this.role = user.getRole();
+    private final User user;
+    private Map<String, Object> attributes;
+
+    private UserPrincipal(User user) {
+        this.user = user;
     }
 
-    public UserPrincipal(Long userId, String email, String password, UserRole role) {
-        this.userId = userId;
-        this.email = email;
-        this.password = password;
-        this.role = role;
+    private UserPrincipal(User user, Map<String, Object> attributes) {
+        this.user = user;
+        this.attributes = attributes;
+    }
+
+    public static UserPrincipal create(User user) {
+        return new UserPrincipal(user);
+    }
+
+    public static UserPrincipal create(User user, Map<String, Object> attributes) {
+        return new UserPrincipal(user, attributes);
+    }
+
+    public Long getUserId() {
+        return user.getId();
+    }
+
+    @Override
+    public Map<String, Object> getAttributes() {
+        return attributes;
     }
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return List.of(new SimpleGrantedAuthority(role.name()));
+        return Collections.singletonList(new SimpleGrantedAuthority(user.getRole().name()));
     }
 
     @Override
     public String getPassword() {
-        return password;
+        return user.getPassword();
     }
 
     @Override
     public String getUsername() {
-        return email;
+        return user.getEmail();
     }
 
     @Override
-    public boolean isAccountNonExpired() {
-        return true;
+    public String getName() {
+        return String.valueOf(user.getId());
     }
 
-    @Override
-    public boolean isAccountNonLocked() {
-        return true;
-    }
-
-    @Override
-    public boolean isCredentialsNonExpired() {
-        return true;
-    }
-
-    @Override
-    public boolean isEnabled() {
-        return true;
-    }
+    @Override public boolean isAccountNonExpired() { return true; }
+    @Override public boolean isAccountNonLocked() { return true; }
+    @Override public boolean isCredentialsNonExpired() { return true; }
+    @Override public boolean isEnabled() { return true; }
 }
